<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="6dp">

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:textSize="32sp"
        tools:text="@string/lorem" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/lorem_ipsum" />

    <TextView
        android:id="@+id/textLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        tools:text="@string/lorem_normal" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/picture"
            android:scaleType="fitXY"
            tools:src="@drawable/placeholder" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="italic"
        tools:text="@string/lorem_short" />

    <TextView
        android:id="@+id/textSubHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textSize="24sp"
        tools:text="@string/lorem_ipsum" />

    <TextView
        android:id="@+id/textSubTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:text="@string/lorem_ipsum" />

    <TextView
        android:id="@+id/textBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        tools:text="@string/lorem_medium" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardQuote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="4dp"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/viewQuote"
                android:layout_width="8dp"
                android:layout_height="0dp"
                android:background="@color/primary"
                app:layout_constraintBottom_toBottomOf="@id/textQuote"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textQuote" />

            <TextView
                android:id="@+id/textQuote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:padding="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/viewQuote"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/lorem_normal" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIcon"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:icon="@drawable/link" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLink"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Link" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textLanguage"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/surfaceVariant"
                android:gravity="start|center"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="@+id/horizontalScrollView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Kotlin" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCopy"
                style="?attr/materialIconButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/copy"
                app:icon="@drawable/copy"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbarSize="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textLanguage">

                <TextView
                    android:id="@+id/textCode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="12dp"
                    android:textIsSelectable="true"
                    android:textSize="14sp"
                    tools:text="@string/lorem_short" />
            </HorizontalScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/textExtra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        tools:text="@string/lorem_medium" />

    <TextView
        android:id="@+id/textNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:text="@string/lorem_normal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:hint="Text here" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAction"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/action"
        app:cornerRadius="8dp"
        tools:text="@string/login" />
</LinearLayout>